--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 # COMMENT: These are two basic redirect rules
 # COMMENT: This is an abbreviated syntax for rules that fit in one line
-redirects = [
+#redirects = [
 #  {from = "/callback", to = "/index.html", status = 200, force=true},
-   {from = "/*", to = "/index.html", status = 200, force=true}
-   ]
+#   {from = "/*", to = "/index.html", status = 200, force=true}
+#   ]
 
 # COMMENT: These are two rules with all the fields expanded
 # COMMENT: This is an expanded syntax for rules that won't fit in one line
