--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "import/no-unassigned-import": 0,
     "semi": ["error", "never"],
     "no-console": "off",
+    "vue/max-attributes-per-line": "off",
     "space-before-function-paren": [
       0,
       {
