--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsqr": "^1.0.4",
     "jwt-decode": "^2.2.0",
     "netlify-lambda": "^0.3.1",
+    "request": "^2.85.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.3",
@@ -112,5 +113,9 @@
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
   },
-  "browserslist": [ "> 1%", "last 2 versions", "not ie <= 8" ]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
