--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "country-list": "^1.1.0",
     "jsqr": "^1.0.4",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.22.1",
     "netlify-lambda": "^0.3.1",
     "request": "^2.85.0",
     "stylus": "^0.54.5",
