--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,12 @@ selenium-debug.log
 *.njsproj
 *.sln
 src/components/config.js
+
+#awsmobilejs
+appsync-info.json
+aws-info.json
+project-info.json
+aws-exports.js
+awsmobilejs/.awsmobile/backend-build
+awsmobilejs/\#current-backend-info
+~awsmobilejs-*/
