--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "devbak": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "dev": "node build/dev-server.js",
     "lambda": "netlify-lambda serve lambda-src",
-    "start": "npm run lambda & npm run dev",
+    "lambda:build": "netlify-lambda build lambda-src",
+    "start": "npm run dev && npm run lambda",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
@@ -19,27 +20,31 @@
     "@capacitor/cli": "^1.0.0-alpha.34",
     "@capacitor/core": "^1.0.0-alpha.34",
     "amazon-cognito-identity-js": "^2.0.0",
-    "aws-amplify": "^0.2.14",
-    "aws-sdk": "^2.197.0",
+    "aws-amplify": "^0.3.0",
+    "aws-appsync": "^1.0.12",
     "axios": "^0.18.0",
     "country-list": "^1.1.0",
+    "eslint-plugin-graphql": "^2.1.0",
     "jsqr": "^1.0.4",
     "jwt-decode": "^2.2.0",
     "netlify-lambda": "^0.3.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "vue": "^2.5.3",
     "vue-authenticate": "^1.3.1",
     "vue-awesome": "^2.3.3",
     "vue-axios": "^2.1.1",
     "vue-resource": "^1.5.0",
-    "vue-router": "^3.0.1",
     "vuetify": "^1.0.1",
     "vuex": "^3.0.1",
     "vuex-localstorage": "^1.0.0",
-    "webcamjs": "^1.0.25"
+    "webcamjs": "^1.0.25",
+    "uuid": "^3.2.1",
+    "vue": "^2.5.13",
+    "vue-apollo": "^3.0.0-beta.4",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "graphql-tag": "^2.7.3",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
@@ -92,6 +97,7 @@
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
+    "setimmediate": "^1.0.5",
     "shelljs": "^0.7.6",
     "sw-precache-webpack-plugin": "^0.11.4",
     "uglify-es": "^3.0.25",
@@ -112,5 +118,9 @@
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
   },
-  "browserslist": [ "> 1%", "last 2 versions", "not ie <= 8" ]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
