--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@capacitor/cli": "^1.0.0-alpha.34",
     "@capacitor/core": "^1.0.0-alpha.34",
-    "amazon-cognito-identity-js": "^2.0.0",
+    "amazon-cognito-identity-js": "^2.0.3",
     "aws-amplify": "^0.2.14",
     "aws-sdk": "^2.197.0",
     "axios": "^0.18.0",
@@ -31,10 +31,12 @@
     "request": "^2.85.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "vue": "^2.5.3",
+    "vue": "^2.5.16",
     "vue-authenticate": "^1.3.1",
     "vue-awesome": "^2.3.3",
     "vue-axios": "^2.1.1",
+    "vue-full-calendar": "^2.5.4",
+    "vue-fullcalendar": "^1.0.9",
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.1",
@@ -65,6 +67,7 @@
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "eslint": "^4.15.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
