--- a/awsmobilejs/backend/mobile-hub-project.yml
+++ b/awsmobilejs/backend/mobile-hub-project.yml
@@ -2,6 +2,104 @@
 apps:
   web: !com.amazonaws.mobilehub.v0.AppDO {}
 features:
+  cloudlogic: !com.amazonaws.mobilehub.v0.CloudLogic 
+    components:
+      Andrews Apis: !com.amazonaws.mobilehub.v0.API 
+        attributes:
+          description: andrews admin apis
+          disable-aws-auth: false
+          name: Andrews Apis
+          requires-signin: false
+          sdk-generation-stage-name: Development
+        paths:
+          /items: !com.amazonaws.mobilehub.v0.Function 
+            description: 'Handler for calls to resource path : /items/{proxy+}'
+            environment: {}
+            handler: index.handler
+            hashcode: wxE8gyxomJQHWri//xoTzIOMWARrECKS+YNro1Ygyp0=
+            memorySize: '128'
+            modified: '2018-04-29T07:44:10.100+0000'
+            name: humanityHandler
+            runtime: nodejs6.10
+            timeout: '3'
+            version: Vix3FYcRM4i8k03MGnJy_LhWmf48nmyM
+          '/items/{proxy+}': !com.amazonaws.mobilehub.v0.Function 
+            description: 'Handler for calls to resource path : /items/{proxy+}'
+            environment: {}
+            handler: index.handler
+            hashcode: wxE8gyxomJQHWri//xoTzIOMWARrECKS+YNro1Ygyp0=
+            memorySize: '128'
+            modified: '2018-04-29T07:44:10.100+0000'
+            name: humanityHandler
+            runtime: nodejs6.10
+            timeout: '3'
+            version: hrxqWjYRjnpw71uRynF_ExkbhLAmABPz
+          /path-7c8: !com.amazonaws.mobilehub.v0.Function 
+            description: 'Handler for calls to resource path : /path-7c8/{proxy+}'
+            environment: {}
+            handler: index.handler
+            hashcode: wxE8gyxomJQHWri//xoTzIOMWARrECKS+YNro1Ygyp0=
+            memorySize: '128'
+            modified: '2018-04-29T07:44:10.297+0000'
+            name: snipeitHandler
+            runtime: nodejs6.10
+            timeout: '3'
+            version: YQIQVxJ7.6Mi3Ns2LDzE4GOnnHFXq22M
+          '/path-7c8/{proxy+}': !com.amazonaws.mobilehub.v0.Function 
+            description: 'Handler for calls to resource path : /path-7c8/{proxy+}'
+            environment: {}
+            handler: index.handler
+            hashcode: wxE8gyxomJQHWri//xoTzIOMWARrECKS+YNro1Ygyp0=
+            memorySize: '128'
+            modified: '2018-04-29T07:44:10.297+0000'
+            name: snipeitHandler
+            runtime: nodejs6.10
+            timeout: '3'
+            version: Ixeng1b7v0UVARQr.rAH7YJDEwdtaTlB
+          /path-7ca: !com.amazonaws.mobilehub.v0.Function 
+            description: 'Handler for calls to resource path : /path-7ca/{proxy+}'
+            environment: {}
+            handler: index.handler
+            hashcode: wxE8gyxomJQHWri//xoTzIOMWARrECKS+YNro1Ygyp0=
+            memorySize: '128'
+            modified: '2018-04-29T07:44:10.130+0000'
+            name: timeClockHandlerer
+            runtime: nodejs6.10
+            timeout: '3'
+            version: BYl3veRo6wV9_VpWNbsff5gZUsnHbjEy
+          '/path-7ca/{proxy+}': !com.amazonaws.mobilehub.v0.Function 
+            description: 'Handler for calls to resource path : /path-7ca/{proxy+}'
+            environment: {}
+            handler: index.handler
+            hashcode: wxE8gyxomJQHWri//xoTzIOMWARrECKS+YNro1Ygyp0=
+            memorySize: '128'
+            modified: '2018-04-29T07:44:10.130+0000'
+            name: timeClockHandlerer
+            runtime: nodejs6.10
+            timeout: '3'
+            version: O0dzgPfPTEpELnGWNnFfciHzynqNtFlj
+          /path-7cc: !com.amazonaws.mobilehub.v0.Function 
+            description: 'Handler for calls to resource path : /path-7cc/{proxy+}'
+            environment: {}
+            handler: index.handler
+            hashcode: wxE8gyxomJQHWri//xoTzIOMWARrECKS+YNro1Ygyp0=
+            memorySize: '128'
+            modified: '2018-04-29T07:44:09.976+0000'
+            name: maintenanceHandler
+            runtime: nodejs6.10
+            timeout: '3'
+            version: _C5z4yk.t5VsdqYYoo.ALKWlvaq7GV.c
+          '/path-7cc/{proxy+}': !com.amazonaws.mobilehub.v0.Function 
+            description: 'Handler for calls to resource path : /path-7cc/{proxy+}'
+            environment: {}
+            handler: index.handler
+            hashcode: wxE8gyxomJQHWri//xoTzIOMWARrECKS+YNro1Ygyp0=
+            memorySize: '128'
+            modified: '2018-04-29T07:44:09.976+0000'
+            name: maintenanceHandler
+            runtime: nodejs6.10
+            timeout: '3'
+            version: pC5TgriQBqVgpTsqge1c1mFLXo3gzibs
   content-delivery: !com.amazonaws.mobilehub.v0.ContentDelivery 
     attributes:
       enabled: true
