--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,8 +3,8 @@
   "lang": "en",
   "name": "Andrews Admin App",
   "scope": "/",
-  "display": "browser",
-  "start_url": "index.html",
+  "display": "fullscreen",
+  "start_url": "https://romantic-engelbart-edc5f0.netlify.com/",
   "short_name": "AAA",
   "theme_color": "transparent",
   "description": "",
