--- a/awsmobilejs/backend/mobile-hub-project.yml
+++ b/awsmobilejs/backend/mobile-hub-project.yml
@@ -13,101 +13,101 @@ features:
           sdk-generation-stage-name: Development
         paths:
           /items: !com.amazonaws.mobilehub.v0.Function 
-            codeFilename: uploads/humanityHandler-20180429040315.zip
+            codeFilename: uploads/humanityHandler-20180429042107.zip
             description: 'Handler for calls to resource path : /items/{proxy+}'
             environment: {}
             handler: index.handler
-            hashcode: 3nGU6W4QuN+N1QHSXlaP75/cFrb7/PBFp0h31U6m4Gs=
+            hashcode: 1iTVbwqr/ASX4rej459heirxMb31xfYdPuX7ZAqlpoU=
             memorySize: '128'
-            modified: '2018-04-29T09:04:37.499+0000'
+            modified: '2018-04-29T09:21:58.536+0000'
             name: humanityHandler
             runtime: nodejs8.10
             timeout: '3'
-            version: KwyEf9X.HrnprEZE8w2Veps5VyQa.Rr2
+            version: zNoqHYqqFZfbJsO8ipnuvWt2RlwnoQaF
           '/items/{proxy+}': !com.amazonaws.mobilehub.v0.Function 
-            codeFilename: uploads/humanityHandler-20180429040315.zip
+            codeFilename: uploads/humanityHandler-20180429042107.zip
             description: 'Handler for calls to resource path : /items/{proxy+}'
             environment: {}
             handler: index.handler
-            hashcode: 3nGU6W4QuN+N1QHSXlaP75/cFrb7/PBFp0h31U6m4Gs=
+            hashcode: 1iTVbwqr/ASX4rej459heirxMb31xfYdPuX7ZAqlpoU=
             memorySize: '128'
-            modified: '2018-04-29T09:04:37.499+0000'
+            modified: '2018-04-29T09:21:58.536+0000'
             name: humanityHandler
             runtime: nodejs8.10
             timeout: '3'
-            version: k5IuZav_wuZdrcZVcexDy.lWBK3lDf4U
+            version: DkT1FWgmJS3Db3qxE.nJyXuUK6paVoU9
           /path-7c8: !com.amazonaws.mobilehub.v0.Function 
-            codeFilename: uploads/snipeitHandler-20180429040315.zip
+            codeFilename: uploads/snipeitHandler-20180429042107.zip
             description: 'Handler for calls to resource path : /path-7c8/{proxy+}'
             environment: {}
             handler: index.handler
-            hashcode: 3nGU6W4QuN+N1QHSXlaP75/cFrb7/PBFp0h31U6m4Gs=
+            hashcode: 1iTVbwqr/ASX4rej459heirxMb31xfYdPuX7ZAqlpoU=
             memorySize: '128'
-            modified: '2018-04-29T09:04:38.171+0000'
+            modified: '2018-04-29T09:21:58.496+0000'
             name: snipeitHandler
             runtime: nodejs6.10
             timeout: '3'
-            version: N0kcHGGRjtq.kCPaB4FYxbROd2DQ6QEX
+            version: zG12mESrIRBdU3c.pusCscW2Vtgex.XF
           '/path-7c8/{proxy+}': !com.amazonaws.mobilehub.v0.Function 
-            codeFilename: uploads/snipeitHandler-20180429040315.zip
+            codeFilename: uploads/snipeitHandler-20180429042107.zip
             description: 'Handler for calls to resource path : /path-7c8/{proxy+}'
             environment: {}
             handler: index.handler
-            hashcode: 3nGU6W4QuN+N1QHSXlaP75/cFrb7/PBFp0h31U6m4Gs=
+            hashcode: 1iTVbwqr/ASX4rej459heirxMb31xfYdPuX7ZAqlpoU=
             memorySize: '128'
-            modified: '2018-04-29T09:04:38.171+0000'
+            modified: '2018-04-29T09:21:58.496+0000'
             name: snipeitHandler
             runtime: nodejs6.10
             timeout: '3'
-            version: 5Jb7RK9Wyy2DejcBDwwq_sUOCc_mwuAf
+            version: aDPpS76I1zcNBJPFZi7U.fa.r39ZOG.V
           /path-7ca: !com.amazonaws.mobilehub.v0.Function 
-            codeFilename: uploads/timeClockHandlerer-20180429040315.zip
+            codeFilename: uploads/timeClockHandlerer-20180429042107.zip
             description: 'Handler for calls to resource path : /path-7ca/{proxy+}'
             environment: {}
             handler: index.handler
-            hashcode: 3nGU6W4QuN+N1QHSXlaP75/cFrb7/PBFp0h31U6m4Gs=
+            hashcode: 1iTVbwqr/ASX4rej459heirxMb31xfYdPuX7ZAqlpoU=
             memorySize: '128'
-            modified: '2018-04-29T09:04:37.544+0000'
+            modified: '2018-04-29T09:21:58.181+0000'
             name: timeClockHandlerer
             runtime: nodejs6.10
             timeout: '3'
-            version: m0r0sT2iHb83HnuZayxi5PhaCZBeDVL5
+            version: R9LZNOSCbjPxinhIEBI7.T331SxZCQsy
           '/path-7ca/{proxy+}': !com.amazonaws.mobilehub.v0.Function 
-            codeFilename: uploads/timeClockHandlerer-20180429040315.zip
+            codeFilename: uploads/timeClockHandlerer-20180429042107.zip
             description: 'Handler for calls to resource path : /path-7ca/{proxy+}'
             environment: {}
             handler: index.handler
-            hashcode: 3nGU6W4QuN+N1QHSXlaP75/cFrb7/PBFp0h31U6m4Gs=
+            hashcode: 1iTVbwqr/ASX4rej459heirxMb31xfYdPuX7ZAqlpoU=
             memorySize: '128'
-            modified: '2018-04-29T09:04:37.544+0000'
+            modified: '2018-04-29T09:21:58.181+0000'
             name: timeClockHandlerer
             runtime: nodejs6.10
             timeout: '3'
-            version: 6z5DdTuXsavYIXtLeyJfc2R82CkWMT8Y
+            version: qsMwE0DIyCrV9zHIBCAv5wtPdbG1BzFp
           /path-7cc: !com.amazonaws.mobilehub.v0.Function 
-            codeFilename: uploads/maintenanceHandler-20180429040315.zip
+            codeFilename: uploads/maintenanceHandler-20180429042107.zip
             description: 'Handler for calls to resource path : /path-7cc/{proxy+}'
             environment: {}
             handler: index.handler
-            hashcode: 3nGU6W4QuN+N1QHSXlaP75/cFrb7/PBFp0h31U6m4Gs=
+            hashcode: 1iTVbwqr/ASX4rej459heirxMb31xfYdPuX7ZAqlpoU=
             memorySize: '128'
-            modified: '2018-04-29T09:04:40.182+0000'
+            modified: '2018-04-29T09:21:58.156+0000'
             name: maintenanceHandler
             runtime: nodejs6.10
             timeout: '3'
-            version: kE_L877gCXMGzmIdXj8FrNvzSx5irr_B
+            version: pWXyPy_OxnD6KHg74cnLo.qhfWdMqAXP
           '/path-7cc/{proxy+}': !com.amazonaws.mobilehub.v0.Function 
-            codeFilename: uploads/maintenanceHandler-20180429040315.zip
+            codeFilename: uploads/maintenanceHandler-20180429042107.zip
             description: 'Handler for calls to resource path : /path-7cc/{proxy+}'
             environment: {}
             handler: index.handler
-            hashcode: 3nGU6W4QuN+N1QHSXlaP75/cFrb7/PBFp0h31U6m4Gs=
+            hashcode: 1iTVbwqr/ASX4rej459heirxMb31xfYdPuX7ZAqlpoU=
             memorySize: '128'
-            modified: '2018-04-29T09:04:40.182+0000'
+            modified: '2018-04-29T09:21:58.156+0000'
             name: maintenanceHandler
             runtime: nodejs6.10
             timeout: '3'
-            version: pH0EjEkWJSe7B.gOanFhVhsFnHjwTu.V
+            version: 39RotDl8N18xhlciJlIuhlIit7GflCij
   content-delivery: !com.amazonaws.mobilehub.v0.ContentDelivery 
     attributes:
       enabled: true
