--- a/awsmobilejs/backend/mobile-hub-project.yml
+++ b/awsmobilejs/backend/mobile-hub-project.yml
@@ -13,71 +13,77 @@ features:
           sdk-generation-stage-name: Development
         paths:
           /items: !com.amazonaws.mobilehub.v0.Function 
+            codeFilename: uploads/timeclocksHandler-20180501124556.zip
             description: 'Handler for calls to resource path : /items/{proxy+}'
             environment: {}
             handler: index.handler
-            hashcode: lMsMgTdkuLsjcshuUT2w5HEXI76Y7AFbNsDRlcDiCvo=
+            hashcode: TdrARqjO+zGogzJtEtorUUNR6GuYow8d29vNigXVldA=
             memorySize: '128'
-            modified: '2018-05-01T09:40:32.155+0000'
+            modified: '2018-05-01T17:46:41.042+0000'
             name: timeclocksHandler
             runtime: nodejs6.10
             timeout: '3'
-            version: MLXTgmNeA5cmkPj0yCdXeQJuLs.dURPS
+            version: wYFvsmuKyWkEimE7P_M3zSvloJyIqhDI
           '/items/{proxy+}': !com.amazonaws.mobilehub.v0.Function 
+            codeFilename: uploads/timeclocksHandler-20180501124556.zip
             description: 'Handler for calls to resource path : /items/{proxy+}'
             environment: {}
             handler: index.handler
-            hashcode: lMsMgTdkuLsjcshuUT2w5HEXI76Y7AFbNsDRlcDiCvo=
+            hashcode: TdrARqjO+zGogzJtEtorUUNR6GuYow8d29vNigXVldA=
             memorySize: '128'
-            modified: '2018-05-01T09:40:32.155+0000'
+            modified: '2018-05-01T17:46:41.042+0000'
             name: timeclocksHandler
             runtime: nodejs6.10
             timeout: '3'
-            version: wPHrrIN72.W0jN8LsAIatSdoudPid5gv
+            version: muqlls3ABS6_7Kxfv5wLw4CQG8l13Qrm
           /path-55b: !com.amazonaws.mobilehub.v0.Function 
+            codeFilename: uploads/employeesHandler-20180501124556.zip
             description: 'Handler for calls to resource path : /path-55b/{proxy+}'
             environment: {}
             handler: index.handler
-            hashcode: lMsMgTdkuLsjcshuUT2w5HEXI76Y7AFbNsDRlcDiCvo=
+            hashcode: TdrARqjO+zGogzJtEtorUUNR6GuYow8d29vNigXVldA=
             memorySize: '128'
-            modified: '2018-05-01T09:40:32.077+0000'
+            modified: '2018-05-01T17:46:39.497+0000'
             name: employeesHandler
             runtime: nodejs6.10
             timeout: '3'
-            version: wc36xJienXPpi3xEQI6Z1QLIqnLuy8Fu
+            version: DdAC9Ls9gB5tuq2HQm6c.vQRPlrtlND6
           '/path-55b/{proxy+}': !com.amazonaws.mobilehub.v0.Function 
+            codeFilename: uploads/employeesHandler-20180501124556.zip
             description: 'Handler for calls to resource path : /path-55b/{proxy+}'
             environment: {}
             handler: index.handler
-            hashcode: lMsMgTdkuLsjcshuUT2w5HEXI76Y7AFbNsDRlcDiCvo=
+            hashcode: TdrARqjO+zGogzJtEtorUUNR6GuYow8d29vNigXVldA=
             memorySize: '128'
-            modified: '2018-05-01T09:40:32.077+0000'
+            modified: '2018-05-01T17:46:39.497+0000'
             name: employeesHandler
             runtime: nodejs6.10
             timeout: '3'
-            version: zyrolYyrPzfg_QMFMJitFb2PHF0sQnMK
+            version: FZL7oDCDmhNn_WsG_NETS9QM4h8bTgEP
           /path-55d: !com.amazonaws.mobilehub.v0.Function 
+            codeFilename: uploads/oauth2Handler-20180501124556.zip
             description: 'Handler for calls to resource path : /path-55d/{proxy+}'
             environment: {}
             handler: index.handler
-            hashcode: lMsMgTdkuLsjcshuUT2w5HEXI76Y7AFbNsDRlcDiCvo=
+            hashcode: TdrARqjO+zGogzJtEtorUUNR6GuYow8d29vNigXVldA=
             memorySize: '128'
-            modified: '2018-05-01T09:40:32.516+0000'
+            modified: '2018-05-01T17:46:39.187+0000'
             name: oauth2Handler
             runtime: nodejs6.10
             timeout: '3'
-            version: NitDte4HG4MQqX.88_fkXXD_baB0Xsrf
+            version: tQ5CCkBRyjYbEOYZ0izshopCeNHkDU4m
           '/path-55d/{proxy+}': !com.amazonaws.mobilehub.v0.Function 
+            codeFilename: uploads/oauth2Handler-20180501124556.zip
             description: 'Handler for calls to resource path : /path-55d/{proxy+}'
             environment: {}
             handler: index.handler
-            hashcode: lMsMgTdkuLsjcshuUT2w5HEXI76Y7AFbNsDRlcDiCvo=
+            hashcode: TdrARqjO+zGogzJtEtorUUNR6GuYow8d29vNigXVldA=
             memorySize: '128'
-            modified: '2018-05-01T09:40:32.516+0000'
+            modified: '2018-05-01T17:46:39.187+0000'
             name: oauth2Handler
             runtime: nodejs6.10
             timeout: '3'
-            version: GQ5hBgqtWAZhSuvDHJeV1ki2eDYqmtBo
+            version: 6uYB.fO_2_cy0WZv1QQX7NElF8yzmdQJ
   content-delivery: !com.amazonaws.mobilehub.v0.ContentDelivery 
     attributes:
       enabled: true
